major style changes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,48 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Etch-A-Sketch</title>
 </head>
-<body>
-    <button id="default" class="button">Black</button>
+<body class="has-background-danger-light">
+    <div class="container pt-6">
+        <p class="title has-text-centered has-text-weight-bold">
+            ETCH A SKETCH
+        </p>
+        <div class="box">
+            <div class="columns">
+                <div class="column is-half">
+                    <aside class="menu">
+                        <p class="menu-label">
+                          Option
+                        </p>
+                        <ul class="menu-list">
+                            <li><a id="default" class="is-active">Black</a></li>
+                            <li><a id="randoms">Random Color</a></li>
+                            <li><a id="eraser">Eraser</a></li>
+                            <li><a id="reset">Reset</a></li>
+                        </ul>
+                        <p class="menu-label">
+                            Size
+                        </p>
+                        <ul class="menu-list">
+                            <li class="slider">
+                                <input type="range" value="16" min="1" max="100" id="grid-size" />
+                            </li>
+                        </ul>
+                    </aside>
+                </div>
+                <div class="column">
+                    <div class="canvas"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--<button id="default" class="button">Black</button>
     <button id="randoms" class="button">Random Color</button>
     <button id="eraser" class="button">Eraser</button>
     <button id="reset" class="button">Reset</button>
     <div class="slider">
         <input type="range" value="16" min="1" max="100" id="grid-size" />
     </div>
-    <div class="canvas"></div>
+    <div class="canvas"></div>-->
     <script src="./js/etch-a-sketch.js"></script>
 </body>
 </html>
