add active button

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
                           Option
                         </p>
                         <ul class="menu-list">
-                            <li><a id="default" class="is-active">Black</a></li>
-                            <li><a id="randoms">Random Color</a></li>
-                            <li><a id="eraser">Eraser</a></li>
-                            <li><a id="reset">Reset</a></li>
+                            <li><a id="default" class="btn">Black</a></li>
+                            <li><a id="randoms" class="btn">Random Color</a></li>
+                            <li><a id="eraser" class="btn">Eraser</a></li>
                         </ul>
                         <p class="menu-label">
                             Size
@@ -32,6 +31,12 @@
                             <li class="slider">
                                 <input type="range" value="16" min="1" max="100" id="grid-size" />
                             </li>
+                        </ul>
+                        <p class="menu-label">
+                            Size
+                        </p>
+                        <ul class="menu-list">
+                            <li><a id="reset">Reset</a></li>
                         </ul>
                     </aside>
                 </div>
