change class name

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                           Option
                         </p>
                         <ul class="menu-list">
-                            <li><a id="default" class="btn">Black</a></li>
-                            <li><a id="randoms" class="btn">Random Color</a></li>
-                            <li><a id="eraser" class="btn">Eraser</a></li>
+                            <li><a id="default" class="button-active">Black</a></li>
+                            <li><a id="randoms" class="button-active">Random Color</a></li>
+                            <li><a id="eraser" class="button-active">Eraser</a></li>
                         </ul>
                         <p class="menu-label">
                             Size
@@ -36,7 +36,7 @@
                             Size
                         </p>
                         <ul class="menu-list">
-                            <li><a id="reset">Reset</a></li>
+                            <li><a id="reset" class="reset-btn">Reset</a></li>
                         </ul>
                     </aside>
                 </div>
