--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Etch-A-Sketch</title>
 </head>
-<body class="has-background-danger-light">
-    <div class="container pt-6">
+<body class="">
+    <div class="container pt-4">
         <p class="title has-text-centered has-text-weight-bold">
             ETCH A SKETCH
         </p>
@@ -33,10 +33,10 @@
                             </li>
                         </ul>
                         <p class="menu-label">
-                            Size
+                            Board
                         </p>
                         <ul class="menu-list">
-                            <li><a id="reset" class="reset-btn">Reset</a></li>
+                            <li><a id="reset" class="button-active">Clear Board</a></li>
                         </ul>
                     </aside>
                 </div>
@@ -46,14 +46,6 @@
             </div>
         </div>
     </div>
-    <!--<button id="default" class="button">Black</button>
-    <button id="randoms" class="button">Random Color</button>
-    <button id="eraser" class="button">Eraser</button>
-    <button id="reset" class="button">Reset</button>
-    <div class="slider">
-        <input type="range" value="16" min="1" max="100" id="grid-size" />
-    </div>
-    <div class="canvas"></div>-->
     <script src="./js/etch-a-sketch.js"></script>
 </body>
 </html>
